@@ -156,6 +156,8 @@ Tests
 Build
 -----
 
+- Issue #26359: Add the --with-optimizations configure flag.
+
 - Issue #10910: Avoid C++ compilation errors on FreeBSD and OS X.
   Also update FreedBSD version checks for the original ctype UTF-8 workaround.
 
